# snake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: Game.h  GameEngine.h  GameState.h  Gui.h  Snake.h  UseImGui.h  snake.h  use_imgui.h
src/: Game.cpp  GameEngine.cpp  GameState.cpp  Gui.cpp  Snake.cpp  UseImGui.cpp  main.cpp  snake.cpp  use_imgui.cpp
